8209511: C2 asserts with UseSSE < 4 and AVX enabled: "Label was never bound to a location, but it was used as a jmp target'

Make sure label is bound even if SSE is disabled.

Reviewed-by: kvn